fixed minor layout issues in create-listing page

--- a/client/src/public/CreateListing.css
+++ b/client/src/public/CreateListing.css
@@ -1,7 +1,7 @@
 .dropzone {
   border-radius: 8px;
   padding: 40px;
-  height: 150px;
+
   text-align: center;
   background-color: #f9f9f9;
   cursor: pointer;
