--- a/client/src/public/Navbar.css
+++ b/client/src/public/Navbar.css
@@ -11,5 +11,5 @@
 }
 
 .navbar-fixed {
-  margin-top: 110px;
+  margin-top: 100px;
 }
